Front end tela de forma de pagamento

--- a/src/Frontend/FecaPass/app/src/main/res/values/colors.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="azul5">#4BD3E7</color>
     <color name="branco">#ffffff</color>
     <color name="preto">#000000</color>
+    <color name="cinza_claro">#F2EFEF</color>
     <color name="vermelho">#E33131</color>
 </resources>
