--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_confirmacao_pagamento.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_confirmacao_pagamento.xml
@@ -7,42 +7,48 @@
     android:layout_height="match_parent"
     tools:context=".ConfirmacaoPagamento">
 
+    <!-- Botão Voltar (ícone) -->
     <ImageView
         android:id="@+id/btnVoltar"
         android:layout_width="37dp"
         android:layout_height="41dp"
-        android:layout_gravity="start"
         android:contentDescription="Voltar"
         android:src="@drawable/voltar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.073"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintVertical_bias="0.05"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp" />
 
+    <!-- Título "Pagamento efetuado com sucesso" -->
     <TextView
+        android:id="@+id/txtConfirmacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
         android:text="Pagamento efetuado com sucesso"
         android:textColor="@color/preto"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintTop_toBottomOf="@id/btnVoltar"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginTop="32dp" />
 
+    <!-- Imagem de confirmação -->
+
+    <!-- Botão "Voltar para o início" -->
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="144dp"
+        android:contentDescription="Imagem de confirmação de pagamento"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtConfirmacao"
         app:srcCompat="@drawable/confirmacaopagamento" />
 
     <androidx.cardview.widget.CardView
@@ -52,12 +58,10 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardBackgroundColor="@color/azul2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.921">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="32dp">
 
         <Button
             android:id="@+id/btnVoltarInicio"
@@ -70,6 +74,5 @@
             android:fontFamily="@font/poppins_semibold"
             android:stateListAnimator="@null" />
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
