--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_forma_de_pagamento.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_forma_de_pagamento.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/branco">
+    android:background="@color/branco"
+    tools:context=".FormaDePagamento">
 
     <!-- Top AppBar -->
     <androidx.cardview.widget.CardView
         android:id="@+id/topBar"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="60dp"
         app:cardElevation="4dp"
+        app:cardCornerRadius="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -26,6 +29,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:src="@drawable/iconvoltar"
+                android:contentDescription="Voltar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,13 +42,11 @@
                 android:text="Forma de pagamento"
                 android:textColor="@color/branco"
                 android:textSize="16sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.396"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@id/btnVoltar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.551" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -54,7 +56,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:elevation="4dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/topBar"
@@ -69,13 +70,13 @@
             android:gravity="center_vertical"
             android:background="@color/cinza_claro">
 
-
-        <ImageView
+            <ImageView
                 android:id="@+id/iconPix"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginEnd="12dp"
-                android:src="@drawable/pix" />
+                android:src="@drawable/pix"
+                android:contentDescription="Ícone Pix" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -84,6 +85,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/txtPix"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pix"
@@ -92,9 +94,10 @@
                     android:fontFamily="@font/poppins_bold" />
 
                 <TextView
+                    android:id="@+id/txtDescricaoPix"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pagar com pix é fácil e rápido!"
+                    android:text="Pagar com Pix é fácil e rápido!"
                     android:textColor="@color/preto"
                     android:textSize="12sp"
                     android:fontFamily="@font/poppins_regular" />
@@ -102,11 +105,11 @@
 
             <ImageView
                 android:id="@+id/btnDetalhePix"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/voltar"
                 android:scaleX="-1"
-                android:src="@drawable/voltar" />
-
+                android:contentDescription="Detalhes Pix" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
