--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,7 @@
                 android:layout_height="match_parent"
                 android:backgroundTint="@android:color/transparent"
                 android:text="@string/textCadastrese"
+                android:onClick="cadastrarUsuario"
                 android:textColor="@color/branco"
                 android:textSize="15sp"
                 android:fontFamily="@font/poppins_semibold"
