--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_pix.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_pix.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/branco">
+    android:background="@color/branco"
+    tools:context=".Pix">
 
-    <!-- AppBar -->
+    <!-- Top AppBar -->
     <androidx.cardview.widget.CardView
         android:id="@+id/topBar"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="60dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +29,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="16dp"
                 android:src="@drawable/iconvoltar"
+                android:contentDescription="Voltar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
@@ -41,10 +44,9 @@
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.442"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@id/btnVoltar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.551" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -80,6 +82,7 @@
             android:background="@color/cinza_claro">
 
             <TextView
+                android:id="@+id/txtAvisoTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
@@ -89,6 +92,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtAvisoDescricao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -99,10 +103,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Botão LER TERMOS -->
-
-    <!-- Switch de aceite -->
-
+    <!-- Botão Ler Termos -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLerTermos"
         android:layout_width="0dp"
@@ -119,17 +120,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardAviso" />
 
+    <!-- Switch de Aceite dos Termos -->
     <LinearLayout
         android:id="@+id/termosLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnLerTermos">
 
@@ -140,6 +141,7 @@
             android:trackTint="@color/azul2" />
 
         <TextView
+            android:id="@+id/txtTermos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -149,6 +151,7 @@
             android:textSize="12sp" />
     </LinearLayout>
 
+    <!-- Container do Pagamento -->
     <LinearLayout
         android:id="@+id/containerPagamento"
         android:layout_width="match_parent"
@@ -163,12 +166,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Quantidade -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txtQuantidadeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantidade: "
+                android:textColor="@color/preto"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold" />
+
+            <TextView
+                android:id="@+id/txtQuantidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:text="0 ingresso(s)"
+                android:textColor="@color/preto"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <!-- Total -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/txtTotalLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total: "
@@ -181,11 +212,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_regular"
-                android:text="R$ 90,00"
+                android:text="R$ 0,00"
                 android:textColor="@color/preto"
                 android:textSize="14sp" />
         </LinearLayout>
 
+        <!-- Botão Comprar -->
         <androidx.cardview.widget.CardView
             android:id="@+id/btnComprarIngresso"
             android:layout_width="match_parent"
