--- a/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -17,6 +18,9 @@
         android:layout_weight="1">
 
         <!-- Logo -->
+
+        <!-- Título Cadastre-se -->
+
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
@@ -30,17 +34,17 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.124" />
 
-        <!-- Título Cadastre-se -->
+        <!-- Espaço para empurrar os campos mais para baixo -->
         <TextView
             android:id="@+id/textCadastrese"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_bold"
             android:layout_marginBottom="20dp"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/textCadastrese"
             android:textColor="@color/azul1"
-            android:textStyle="bold"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
@@ -48,7 +52,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.341" />
 
-        <!-- Espaço para empurrar os campos mais para baixo -->
         <Space
             android:layout_width="match_parent"
             android:layout_height="46dp" />
@@ -58,19 +61,23 @@
             android:id="@+id/etNome"
             android:layout_width="306dp"
             android:layout_height="50dp"
+            android:backgroundTint="#F5F9FE"
             android:hint="@string/etNome"
             android:background="@drawable/edit_text"
             android:padding="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:textColorHint="#7C8BA0"/>
 
         <!-- Email -->
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="306dp"
             android:layout_height="50dp"
+            android:backgroundTint="#F5F9FE"
             android:hint="@string/etEmail"
             android:background="@drawable/edit_text"
             android:padding="10dp"
+            android:textColorHint="#7C8BA0"
             android:layout_marginBottom="10dp" />
 
         <!-- Senha -->
@@ -78,12 +85,12 @@
             android:id="@+id/etSenha"
             android:layout_width="306dp"
             android:layout_height="50dp"
+            android:backgroundTint="#F5F9FE"
             android:background="@drawable/edit_text"
             android:hint="@string/etSenha"
             android:padding="10dp"
+            android:textColorHint="#7C8BA0"
             android:layout_marginBottom="10dp" />
-
-        <!-- Concordo com as condições -->
 
         <!-- Botão Criar Conta -->
         <CheckBox
@@ -95,6 +102,7 @@
             android:maxWidth="200dp"
             android:text="@string/cbCondicoes"
             android:textSize="14sp"
+            android:textColor="#3B4054"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.322"
